--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,6 +45,14 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
+        
+        -if: matrix.language == 'java'
+       name: Build Java code
+       id: build_java_code
+       run:
+       ./mvnw package
+       working-directory: Source/Services/RPSLS.JavaPlayer.Api/
+        
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
