--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,9 +20,9 @@ on:
    paths:
     - 'Source/**'
     
-  schedule:
-    - cron: '0 8 * * *'
-    workflow_dispatch:
+  #schedule:
+   # - cron: '0 8 * * *'
+  #  workflow_dispatch:
     
 jobs:
   analyze:
